resources/basic-wirth-grammar
1. Program= BStatement { BStatement } int “END” .
2. BStatement= int ( Assign | Read | Data | Print | Goto | If | For | Next | Dim | Def | Gosub | Return | Remark ) .
3. Assign= “LET” Var “=” Exp .
4. Var= letter digit | letter [ “(” Exp { “,” Exp } “)” ] .
5. Exp= { “+” | “-” } Eb { ( “+” | “-” | “*” | “/” | “^” ) Eb } .
6. Eb= “(” Exp “)” | Num | Var | ( “FN” letter | Predef ) “(” Exp “)” .
7. Predef= “SIN” | “COS” | “TAN” | “ATN” | “EXP” | “ABS” | “LOG” | “SQR” | “INT” | “RND” .
8. Read= “READ” Var { “,” Var } .
9. Data= “DATA” Snum { “,” Snum } .
10.Print= “PRINT” [ Pitem { “,” Pitem } [ “,” ] ].
11.Pitem= Exp | ““” Character { Character } “”” [ Exp ] .
12.Goto= ( “GOTO” | “GO” “TO” ) int .
13. If= “IF” Exp ( “>=” | “>” | “<>” | “<” | “<=” | “=” ) Exp “THEN” int .
14. For= “FOR” letter [ digit ] “=” Exp “TO” Exp [ “STEP” Exp ] .
15.Next= “NEXT” letter [ digit ] .
16.Dim= “DIM” letter “(” int { “,” int } “)” { “,” letter “(” int { “,” int } “)” } .
17.Def= “DEF FN” letter “(” letter [ digit ] “)” “=” Exp .
18.Gosub= “GOSUB” int .
19.Return= “RETURN” .
20.Remark= “REM” { Character } .
21. Int= digit { digit } .
22.Num= ( Int [ “.” { digit } ] | “.” Int ) [ “E” [ “+” | “-” ] Int ] .
23.Snum= [ “+” | “-” ] Num .
24.Character= letter | digit | special .
25. letter = “A” | “B” | “C” | “D” | “E” | “F” | “G” | “H” | “I” | “J”
| “K” | “L” | “M” | “N” | “O” | “P” | “Q” | “R” | “S” | “T” | “U”
| “V” | “W” | “X” | “Y” | “Z” | “a” | “b” | “c” | “d” | “e” | “f”
| “g” | “h” | “i” | “j” | “k” | “l” | “m” | “n” | “o” | “p” | “q” | “r”
| “s” | “t” | “u” | “v” | “w” | “x” | “y” | “z” .
26. digit = “0” | “1” | “2” | “3” | “4” | “5” | “6” | “7” | “8” | “9” .
27. special = “!” | “@” | “#” | “%” | “ ̈” | “&” | “*” | “(” | “)”
| “_” | “+” | “-” | “=” | “§” | “{” | “[” | “a” | “}” | “]” | “o”
| “?” | “/” | “°” | “`” | “ ́” | “^” | “~” | “<” | “,” | “>” | “.”
| “:” | “;” | “|” | “\” | ““” | “”” .
